--- a/Ansible/Jenki Setup.yml
+++ b/Ansible/Jenki Setup.yml
@@ -1,14 +1,13 @@
 ---
-- name: Install Jenkins on Ubuntu
-  hosts: jenkins_servers
-  become: yes  # Run tasks as sudo
-
+- name: Jenkins Deployment Playbook
+  hosts: Jenkin-Master
+  become: yes
   tasks:
-    - name: Update APT package list
+    - name: Update apt package index
       apt:
         update_cache: yes
 
-    - name: Install Java (Required for Jenkins)
+    - name: Install Java
       apt:
         name: openjdk-11-jdk
         state: present
@@ -16,10 +15,13 @@
     - name: Add Jenkins repository key
       shell: wget -q -O - https://pkg.jenkins.io/debian/jenkins.io.key | sudo tee /usr/share/keyrings/jenkins-keyring.asc
 
-    - name: Add Jenkins APT repository
-      shell: echo "deb [signed-by=/usr/share/keyrings/jenkins-keyring.asc] https://pkg.jenkins.io/debian binary/" | sudo tee /etc/apt/sources.list.d/jenkins.list
+    - name: Add Jenkins repository
+      apt_repository:
+        repo: "deb [signed-by=/usr/share/keyrings/jenkins-keyring.asc] https://pkg.jenkins.io/debian binary/"
+        state: present
+        filename: jenkins
 
-    - name: Update APT package list again
+    - name: Update apt package index after adding Jenkins repo
       apt:
         update_cache: yes
 
@@ -28,14 +30,33 @@
         name: jenkins
         state: present
 
-    - name: Start and Enable Jenkins Service
+    - name: Start and enable Jenkins service
       systemd:
         name: jenkins
         state: started
         enabled: yes
 
-    - name: Allow Jenkins through UFW (Firewall)
+    - name: Allow Jenkins through UFW (if enabled)
       ufw:
         rule: allow
         port: "8080"
         proto: tcp
+      ignore_errors: yes  # Ignore errors if UFW is not installed
+
+    - name: Wait for Jenkins to start
+      uri:
+        url: http://localhost:8080
+        status_code: 200
+      register: result
+      retries: 30
+      delay: 10
+      until: result.status == 200
+
+    - name: Print initial admin password
+      command: cat /var/lib/jenkins/secrets/initialAdminPassword
+      register: initial_password
+      changed_when: false
+
+    - name: Show initial admin password
+      debug:
+        msg: "Initial Jenkins admin password is {{ initial_password.stdout }}"
